--- a/index.html
+++ b/index.html
@@ -26,31 +26,35 @@
   </head>
   <body>
     <header>
-      <!--Web Studio-->
-      <a class="style-color-web-studio" href="">
-        Web<span class="studio-color">Studio</span>
-      </a>
-      <!--Панель навигации-->
-      <nav class="nav">
-        <ul>
-          <li><a class="link-color" href="index.html">Студия</a></li>
-          <li><a class="link-color" href="portfolio.html">Портфолио</a></li>
-          <li><a class="link-color" href="Контакты">Контакты</a></li>
+      <div class="container">
+        <!--Web Studio-->
+        <a class="style-color-web-studio" href="">
+          Web<span class="studio-color">Studio</span>
+        </a>
+        <!--Панель навигации-->
+        <nav class="nav">
+          <div class="container-nav">
+            <ul class="container-link-color">
+              <li><a class="link-color" href="index.html">Студия</a></li>
+              <li><a class="link-color" href="portfolio.html">Портфолио</a></li>
+              <li><a class="link-color" href="Контакты">Контакты</a></li>
+            </ul>
+          </div>
+        </nav>
+        <!--Панель адрес и телефон-->
+        <ul class="nav">
+          <li>
+            <a class="nav-contact-color" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="nav-contact-color" href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
+          </li>
         </ul>
-      </nav>
-      <!--Панель адрес и телефон-->
-      <ul class="nav">
-        <li>
-          <a class="nav-contact-color" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a class="nav-contact-color" href="tel:+380961111111"
-            >+38 096 111 11 11</a
-          >
-        </li>
-      </ul>
+      </div>
     </header>
 
     <main>
