--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-      href="https://github.com/sindresorhus/modern-normalize/blob/main/modern-normalize.css"
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" type="text/css" href="./css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -26,181 +27,224 @@
   </head>
   <body>
     <header>
+      <!--Web Studio-->
       <div class="container">
-        <!--Web Studio-->
-        <a class="style-color-web-studio" href="">
-          Web<span class="studio-color">Studio</span>
-        </a>
-        <!--Панель навигации-->
-        <nav class="nav">
-          <div class="container-nav">
-            <ul class="container-link-color">
-              <li><a class="link-color" href="index.html">Студия</a></li>
-              <li><a class="link-color" href="portfolio.html">Портфолио</a></li>
-              <li><a class="link-color" href="Контакты">Контакты</a></li>
+        <div class="box-header">
+          <!--Коробка лого-->
+          <div class="logo-box">
+            <a class="style-color-web-studio" href="">
+              Web<span class="studio-color">Studio</span>
+            </a>
+          </div>
+          <!--Коробка навигации-->
+          <div class="nav-box">
+            <!--Панель навигации-->
+            <nav class="nav">
+              <ul>
+                <li class="hr hr-box-l">
+                  <a class="link-color" href="index.html">Студия</a>
+                </li>
+                <li class="hr hr-box-l">
+                  <a class="link-color" href="portfolio.html">Портфолио</a>
+                </li>
+                <li class="hr">
+                  <a class="link-color" href="Контакты">Контакты</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <!--Панель имейл и телефон-->
+          <div class="tel-box">
+            <!--Панель адрес и телефон-->
+            <ul class="nav">
+              <li class="hr hr-box-l">
+                <a class="contact-color" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="hr">
+                <a class="contact-color" href="tel:+380961111111"
+                  >+38 096 111 11 11</a
+                >
+              </li>
             </ul>
           </div>
-        </nav>
-        <!--Панель адрес и телефон-->
-        <ul class="nav">
-          <li>
-            <a class="nav-contact-color" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="nav-contact-color" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
+        </div>
       </div>
     </header>
-
     <main>
-      <!--Hero-->
-      <div class="heat-box">
-        <!--Надпись-->
-        <h1 class="heat-text">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
-        <button type="button" class="cursor big-button">Заказать услугу</button>
+      <div>
+        <!--Hero-->
+        <div class="heat-bg">
+          <!--Надпись-->
+          <div class="container heat-position">
+            <h1 class="heat-text">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+            <div class="heat-button-position">
+              <button type="button" class="cursor big-button">
+                Заказать услугу
+              </button>
+            </div>
+          </div>
+        </div>
+        <section class="section container">
+          <div class="card-padding">
+            <ul class="card-item">
+              <!-- <li>Внимание к деталям</li> -->
+              <li class="item-position">
+                <h3 class="detail-title">Внимание к деталям</h3>
+                <p class="detail-text">
+                  Идейные соображения, а также начало повседневной работы по
+                  формированию позиции.
+                </p>
+              </li>
+              <li class="item-position">
+                <h3 class="detail-title">Пунктуальность</h3>
+                <p class="detail-text">
+                  Задача организации, в особенности же рамки и место обучения
+                  кадров влечет за собой.
+                </p>
+              </li>
+              <li class="item-position">
+                <h3 class="detail-title">Планирование</h3>
+                <p class="detail-text">
+                  Равным образом консультация с широким активом в значительной
+                  степени обуславливает.
+                </p>
+              </li>
+              <li class="item-position">
+                <h3 class="detail-title">Современные технологии</h3>
+                <p class="detail-text">
+                  Значимость этих проблем настолько очевидна, что реализация
+                  плановых заданий.
+                </p>
+              </li>
+            </ul>
+          </div>
+        </section>
+        <!--Чем мы занимаемся-->
+        <section class="section container">
+          <div class="card-padding">
+            <h2 class="studio-image">Чем мы занимаемся</h2>
+            <ul class="studio-image-card">
+              <li class="studio-image-card-item">
+                <img
+                  src="images/pct1.jpg"
+                  width="370"
+                  height="294"
+                  alt="Картинка 1"
+                />
+              </li>
+              <li class="studio-image-card-item">
+                <img
+                  src="images/pct2.jpg"
+                  width="370"
+                  height="294"
+                  alt="Картинка 2"
+                />
+              </li>
+              <li class="studio-image-card-item">
+                <img
+                  src="images/pct3.jpg"
+                  width="370"
+                  height="294"
+                  alt="Картинка 3"
+                />
+              </li>
+            </ul>
+          </div>
+        </section>
+        <!--Наша команда-->
+        <section class="section container">
+          <div class="card-padding">
+            <h2 class="our-team">Наша команда</h2>
+            <!--Team cards-->
+            <ul class="our-team-card">
+              <!--Team card 1-->
+              <li class="our-team-item">
+                <img
+                  src="images/igor.jpg"
+                  width="270"
+                  height="260"
+                  alt="Игорь"
+                />
+
+                <h3 class="our-team-title">Игорь Демьяненко</h3>
+                <p class="our-team-text">Product designer</p>
+              </li>
+
+              <!--Team card 2-->
+              <li class="our-team-item">
+                <img
+                  src="images/Olga.jpg"
+                  width="270"
+                  height="260"
+                  alt="Ольга"
+                />
+
+                <h3 class="our-team-title">Ольга Репина</h3>
+                <p class="our-team-text">Frontend Developer</p>
+              </li>
+              <!--Team card 3-->
+              <li class="our-team-item">
+                <img
+                  src="images/Nikolai.jpg"
+                  width="270"
+                  height="260"
+                  alt="Николай"
+                />
+
+                <h3 class="our-team-title">Николай Тарасов</h3>
+                <p class="our-team-text">Marketing</p>
+              </li>
+              <!--Team card 4-->
+              <li class="our-team-item">
+                <img
+                  src="images/Mihail.jpg"
+                  width="270"
+                  height="260"
+                  alt="Михаил"
+                />
+
+                <h3 class="our-team-title">Михаил Ермаков</h3>
+                <p class="our-team-text">UL Designer</p>
+              </li>
+            </ul>
+          </div>
+        </section>
       </div>
-      <section>
-        <ul>
-          <!-- <li>Внимание к деталям</li> -->
-          <li>
-            <h3 class="detail-title">Внимание к деталям</h3>
-            <p class="detail-text">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li>
-            <h3 class="detail-title">Пунктуальность</h3>
-            <p class="detail-text">
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h3 class="detail-title">Планирование</h3>
-            <p class="detail-text">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h3 class="detail-title">Современные технологии</h3>
-            <p class="detail-text">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
-      </section>
-      <!--Чем мы занимаемся-->
-      <section>
-        <h2 class="w-w-doing">Чем мы занимаемся</h2>
-        <ul>
-          <li>
-            <img
-              src="images/pct1.jpg"
-              width="370"
-              height="294"
-              alt="Картинка 1"
-            />
-          </li>
-          <li>
-            <img
-              src="images/pct2.jpg"
-              width="370"
-              height="294"
-              alt="Картинка 2"
-            />
-          </li>
-          <li>
-            <img
-              src="images/pct3.jpg"
-              width="370"
-              height="294"
-              alt="Картинка 3"
-            />
-          </li>
-        </ul>
-      </section>
-      <!--Наша команда-->
-      <section>
-        <h2 class="our-team">Наша команда</h2>
-        <!--Team cards-->
-        <ul>
-          <!--Team card 1-->
-          <li>
-            <img src="images/igor.jpg" width="270" height="260" alt="Игорь" />
-
-            <h3 class="our-team-title">Игорь Демьяненко</h3>
-            <p class="our-team-text">Product designer</p>
-          </li>
-
-          <!--Team card 2-->
-          <li>
-            <img src="images/Olga.jpg" width="270" height="260" alt="Ольга" />
-
-            <h3 class="our-team-title">Ольга Репина</h3>
-            <p class="our-team-text">Frontend Developer</p>
-          </li>
-          <!--Team card 3-->
-          <li>
-            <img
-              src="images/Nikolai.jpg"
-              width="270"
-              height="260"
-              alt="Николай"
-            />
-
-            <h3 class="our-team-title">Николай Тарасов</h3>
-            <p class="our-team-text">Marketing</p>
-          </li>
-          <!--Team card 4-->
-          <li>
-            <img
-              src="images/Mihail.jpg"
-              width="270"
-              height="260"
-              alt="Михаил"
-            />
-
-            <h3 class="our-team-title">Михаил Ермаков</h3>
-            <p class="our-team-text">UL Designer</p>
-          </li>
-        </ul>
-      </section>
     </main>
-
     <footer class="footer">
-      <a class="style-color-web-studio" href="">
-        Web<span class="studio-color-footer">Studio</span>
-      </a>
-      <address>
-        <ul>
-          <li>
-            <a
-              class="text-footer-map"
-              href="https://goo.gl/maps/CRWfaXV7XRGESjdQ7"
-            >
-              г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li>
-            <a class="text-footer" href="mailto:info@example.com"
-              >info@example.com</a
-            >
-          </li>
-          <li>
-            <a class="text-footer" href="tel:+380961111111"
-              >+38 099 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <div class="card-padding">
+          <div class="web-footer-position">
+            <a class="style-color-web-studio" href="">
+              Web<span class="studio-color-footer">Studio</span>
+            </a>
+          </div>
+          <address>
+            <ul>
+              <li>
+                <a
+                  class="text-footer-map"
+                  href="https://goo.gl/maps/CRWfaXV7XRGESjdQ7"
+                >
+                  г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li>
+                <a class="text-footer" href="mailto:info@example.com"
+                  >info@example.com</a
+                >
+              </li>
+              <li>
+                <a class="text-footer" href="tel:+380961111111"
+                  >+38 099 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
