--- a/index.html
+++ b/index.html
@@ -30,54 +30,48 @@
       <!--Web Studio-->
       <div class="container">
         <div class="top-header">
-          <!--Коробка лого-->
-          <div class="logo-box">
-            <a class="style-color-web-studio" href="">
-              Web<span class="studio-color">Studio</span>
-            </a>
-          </div>
-          <!--Коробка навигации-->
-          <div class="nav-box">
-            <!--Панель навигации-->
-            <nav class="nav">
-              <ul>
-                <li class="hr hr-mrg-l">
-                  <a class="link-color" href="index.html">Студия</a>
-                </li>
-                <li class="hr hr-mrg-l">
-                  <a class="link-color" href="portfolio.html">Портфолио</a>
-                </li>
-                <li class="hr">
-                  <a class="link-color" href="Контакты">Контакты</a>
-                </li>
-              </ul>
-            </nav>
-          </div>
-          <!--Панель имейл и телефон-->
-          <div class="tel-box">
-            <!--Панель адрес и телефон-->
-            <ul class="nav">
-              <li class="hr hr-mrg-l">
-                <a class="contact-color" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
-                >
+          <a class="style-color-web-studio" href="">
+            Web<span class="studio-color">Studio</span>
+          </a>
+
+          <!--Панель навигации-->
+          <nav class="nav">
+            <ul class="nav-hr">
+              <li class="hr hr-mrg-l hr-2">
+                <a class="link-color" href="index.html">Студия</a>
               </li>
-              <li class="hr">
-                <a class="contact-color" href="tel:+380961111111"
-                  >+38 096 111 11 11</a
-                >
+              <li class="hr hr-mrg-l hr-2">
+                <a class="link-color" href="portfolio.html">Портфолио</a>
+              </li>
+              <li class="hr hr-2">
+                <a class="link-color" href="Контакты">Контакты</a>
               </li>
             </ul>
-          </div>
+          </nav>
+
+          <!--Панель адрес и телефон-->
+          <ul class="nav">
+            <li class="hr hr-mrg-l hr-2">
+              <a class="contact-color" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="hr hr-2">
+              <a class="contact-color" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
         </div>
       </div>
+
     </header>
     <main>
-      <div>
+
         <!--Hero-->
         <div class="heat-bg">
           <!--Надпись-->
-          <div class="container heat-position">
+          <div class="container ">
             <h1 class="heat-text">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
             <div class="heat-button-position">
               <button type="button" class="cursor big-button">
@@ -167,7 +161,7 @@
                   height="260"
                   alt="Игорь"
                 />
-
+                <div class="team">
                 <h3 class="our-team-title">Игорь Демьяненко</h3>
                 <p class="our-team-text">Product designer</p>
               </li>
@@ -209,20 +203,21 @@
                 <p class="our-team-text">UL Designer</p>
               </li>
             </ul>
+            </div>
           </div>
         </section>
       </div>
     </main>
     <footer class="footer">
       <div class="container">
-        <div class="web-footer-position">
+
           <a class="style-color-web-studio" href="">
             Web<span class="studio-color-footer">Studio</span>
           </a>
-        </div>
+
         <address>
           <ul>
-            <li>
+            <li class="adress">
               <a
                 class="text-footer-map"
                 href="https://goo.gl/maps/CRWfaXV7XRGESjdQ7"
@@ -230,12 +225,12 @@
                 г. Киев, пр-т Леси Украинки, 26</a
               >
             </li>
-            <li>
+            <li class="adress">
               <a class="text-footer" href="mailto:info@example.com"
                 >info@example.com</a
               >
             </li>
-            <li>
+            <li class="adress">
               <a class="text-footer" href="tel:+380961111111"
                 >+38 099 111 11 11</a
               >
