--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
   <body>
     <header class="header-line">
       <!--Web Studio-->
-      <div class="container">
-        <div class="top-header">
+        <div class="container top-header">
           <a class="style-color-web-studio" href="">
             Web<span class="studio-color">Studio</span>
           </a>
@@ -50,7 +49,7 @@
           </nav>
 
           <!--Панель адрес и телефон-->
-          <ul class="nav">
+          <ul class="contact-list-nav">
             <li class="hr hr-mrg-l hr-2">
               <a class="contact-color" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
@@ -69,7 +68,7 @@
     <main>
 
         <!--Hero-->
-        <div class="heat-bg">
+        <section class="heat-bg">
           <!--Надпись-->
           <div class="container ">
             <h1 class="heat-text">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
@@ -77,7 +76,7 @@
               <button type="button" class="cursor big-button">
                 Заказать услугу
               </button>
-            </div>
+            </section>>
           </div>
         </div>
         <section class="section">
@@ -120,7 +119,7 @@
           <div class="container">
             <h2 class="w-w-doing">Чем мы занимаемся</h2>
             <ul class="w-w-doing-card">
-              <li class="w-w-doing-card-item">
+              <li class="w-w-doing-card-item-1">
                 <img
                   src="images/pct1.jpg"
                   width="370"
@@ -128,7 +127,7 @@
                   alt="Картинка 1"
                 />
               </li>
-              <li class="w-w-doing-card-item">
+              <li class="w-w-doing-card-ite-1">
                 <img
                   src="images/pct2.jpg"
                   width="370"
@@ -161,7 +160,7 @@
                   height="260"
                   alt="Игорь"
                 />
-                <div class="team">
+                <div class="team-box">
                 <h3 class="our-team-title">Игорь Демьяненко</h3>
                 <p class="our-team-text">Product designer</p>
               </li>
